--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "test": "lab",
+    "start": "babel-node src/example/readme.js",
     "lint": "eslint src",
     "test-cov": "lab --coverage",
     "report-cov": "lab --coverage -r lcov | codeclimate-test-reporter",
@@ -29,6 +30,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.8.0",
+    "codeclimate-test-reporter": "^0.3.3",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-import": "^1.7.0",
