--- a/package.json
+++ b/package.json
@@ -1,44 +1,48 @@
 {
   "name": "voila-di",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "A library for javascript dependency injection",
-  "main": "build/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Griffingj/voila-di.git"
   },
+  "license": "MIT",
+  "author": "John Griffing",
+  "main": ".build/index.js",
+  "types": "./build/index.d.ts",
+  "files": [
+    ".build/"
+  ],
   "scripts": {
+    "build": "tsc --pretty",
+    "lint": "tslint --project . --format msbuild",
+    "postinstall": "tsc --pretty",
+    "prepublish": "tsc --pretty",
+    "report-cov": "lab --coverage | codeclimate-test-reporter",
+    "start": "ts-node ./src/main.ts",
     "test": "lab",
-    "start": "babel-node src/example/readme.js",
-    "lint": "eslint src",
     "test-cov": "lab --coverage",
-    "report-cov": "lab --coverage -r lcov | codeclimate-test-reporter",
-    "prepublish": "npm run build",
-    "build": "babel src --out-dir build",
+    "typecheck": "tsc --pretty --noEmit",
     "validate": "npm ls"
   },
-  "author": "John Griffing",
-  "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.8.0",
-    "babel-eslint": "^6.0.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "babel-register": "^6.8.0",
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.46",
+    "@types/sinon": "^1.16.31",
+    "chai": "^3.5.0",
     "codeclimate-test-reporter": "^0.3.3",
-    "eslint": "^2.7.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-import": "^1.7.0",
-    "eslint-plugin-jsx-a11y": "^1.0.4",
-    "eslint-plugin-react": "^5.0.1",
-    "expect": "^1.20.2",
     "git-validate": "^2.2.1",
-    "lab": "^11.0.1"
+    "lab": "^12.1.0",
+    "sinon": "^1.17.6",
+    "ts-node": "^1.7.2",
+    "tslint": "^3.15.1",
+    "typescript": "^2.1.4"
   },
   "pre-commit": [
     "test",
     "lint",
-    "validate"
+    "validate",
+    "typecheck"
   ]
 }
