Fix ci configurations

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "tslint --project . --format msbuild",
     "postinstall": "tsc --pretty",
     "prepublish": "tsc --pretty",
-    "report-cov": "lab --coverage | codeclimate-test-reporter",
+    "report-cov": "lab --coverage -r lcov | codeclimate-test-reporter",
     "start": "ts-node ./src/main.ts",
     "test": "lab",
     "test-cov": "lab --coverage",
