--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "author": "John Griffing",
   "main": ".build/index.js",
-  "types": "./build/index.d.ts",
+  "types": ".build/index.d.ts",
   "files": [
     ".build/"
   ],
