--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "validate": "npm ls"
   },
   "devDependencies": {
+    "@types/lab": "^11.1.0",
     "@types/chai": "^3.4.34",
     "@types/node": "^6.0.46",
     "@types/sinon": "^1.16.31",
