--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "tslint --project . --format msbuild",
     "prepare": "tsc --pretty",
     "test": "lab",
+    "report-cov": "lab --coverage -r lcov | coveralls",
     "test-cov": "lab --coverage",
     "typecheck": "tsc --pretty --noEmit",
     "validate": "npm ls"
@@ -27,6 +28,7 @@
     "@types/node": "^10.9.2",
     "@types/sinon": "^5.0.1",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.2",
     "git-validate": "^2.2.4",
     "lab": "^16.0.0",
     "sinon": "^6.1.5",
